# logfmt_logger

./: Cargo.toml  Procfile  README.md  app.json
examples/: debug_env.rs  release_env.rs
src/: filter.rs  fmt.rs  lib.rs
