[package]
name = "logfmt_logger"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"
keywords = [
  "heroku",
  "logfmt",
  "log",
  "logger",
  "env_logger"
]

description = """
A logging implementation for `log`
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
termcolor = { version = "1", optional = true }
env_logger = { version = "0.7", optional = true }

[features]
default = ["env", "color"]

env = ["env_logger"]
color = ["termcolor"]